--- a/action.yml
+++ b/action.yml
@@ -5,6 +5,9 @@ description: 'Super-linter is a ready-to-run collection of linters and code anal
 runs:
   using: 'docker'
   image: 'docker://ghcr.io/enda-automation/enda-super-linter:latest'  # x-release-please-version
+  credentials:
+    username: ${{ github.actor }}
+    password: ${{ secrets.container_registery_read }}  
 branding:
   icon: 'check-square'
   color: 'white'
