--- a/action.yml
+++ b/action.yml
@@ -7,7 +7,7 @@ runs:
   image: 'docker://ghcr.io/enda-automation/enda-super-linter:latest'  # x-release-please-version
   credentials:
     username: ${{ github.actor }}
-    password: ${{ secrets.container_registery_read }}  
+    password: ${{ secrets.GITHUB_TOKEN }} 
 branding:
   icon: 'check-square'
   color: 'white'
