--- a/action.yml
+++ b/action.yml
@@ -11,7 +11,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GHCR_PAT }}
 
       - name: Super-Linter
         uses: ghcr.io/enda-automation/enda-super-linter@latest
