--- a/action.yml
+++ b/action.yml
@@ -4,9 +4,10 @@ author: 'Super-linter contributors'
 description: 'Super-linter is a ready-to-run collection of linters and code analyzers, to help validate your source code.'
 runs:
   using: 'docker'
-  image: 'docker://ghcr.io/super-linter/super-linter:v6.3.0'  # x-release-please-version
-  with:
-    id: ${{ secrets.GITHUB_TOKEN }}
+  image: 'docker://ghcr.io/enda-automation/enda-super-linter:latest'  # x-release-please-version
+  credentials:
+    username: ${{ github.actor }}
+    password: ${{ secrets.GHCR_PAT }} 
 branding:
   icon: 'check-square'
   color: 'white'
