--- a/action.yml
+++ b/action.yml
@@ -1,15 +1,16 @@
 ---
-name: 'Super-Linter'
-author: 'Super-linter contributors'
-description: 'Super-linter is a ready-to-run collection of linters and code analyzers, to help validate your source code.'
-runs:
-  using: 'docker'
-  image: 'docker://ghcr.io/enda-automation/test-enda-super-linter:latest'  # x-release-please-version
-  credentials:
-    username: ${{ github.actor }}
-    password: ${{ secrets.GHCR_PAT }} 
-branding:
-  icon: 'check-square'
-  color: 'white'
+steps:
+  - name: Checkout code
+    uses: actions/checkout@v2
+
+  - name: Log in to GitHub Container Registry
+    uses: docker/login-action@v1
+    with:
+      registry: ghcr.io
+      username: ${{ github.actor }}
+      password: ${{ secrets.GHCR_PAT }}
+
+  - name: Run Super-Linter
+    uses: enda-automation/test-enda-super-linter@latest
 # You can view https://github.com/super-linter/super-linter#environment-variables
 # to see a comprehensive list of all environment variables that can be passed
