--- a/action.yml
+++ b/action.yml
@@ -1,16 +1,9 @@
-A_ACTION---
-steps:
-  - name: Checkout code
-    uses: actions/checkout@v2
-
-  - name: Log in to GitHub Container Registry
-    uses: docker/login-action@v1
-    with:
-      registry: ghcr.io
-      username: ${{ github.actor }}
-      password: ${{ secrets.ENDA_ACTION }}
-
-  - name: Run Super-Linter
-    uses: enda-automation/test-enda-super-linter@latest
+---
+name: 'Super-Linter'
+author: 'Super-linter contributors'
+description: 'Super-linter is a ready-to-run collection of linters and code analyzers, to help validate your source code.'
+branding:
+  icon: 'check-square'
+  color: 'white'
 # You can view https://github.com/super-linter/super-linter#environment-variables
 # to see a comprehensive list of all environment variables that can be passed
