--- a/action.yml
+++ b/action.yml
@@ -2,6 +2,9 @@
 name: 'Super-Linter'
 author: 'Super-linter contributors'
 description: 'Super-linter is a ready-to-run collection of linters and code analyzers, to help validate your source code.'
+runs:
+  using: 'docker'
+  image: 'docker://ghcr.io/enda-automation/enda-super-linter-2:latest'  # x-release-please-version
 branding:
   icon: 'check-square'
   color: 'white'
